--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "php": ">=5.3.7",
     "ext-curl": "*",
     "psr/log": "~1.0",
-    "phpunit/phpunit": "^5"
+    "phpunit/phpunit": ">=5"
   },
   "require-dev": {
     "raveren/kint": "~0.9"
